<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Balloon</string>
    <string name="action_add">Add</string>
    <string name="action_add_members">Add Members</string>
    <string name="action_agenda">View Meetup Plan</string>
    <string name="action_comment">Add a Comment</string>
    <string name="action_contact">Contact Host</string>
    <string name="action_create">Create Invite</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="action_delete_member">Remove</string>
    <string name="action_delete_yourself">Remove Self from Group</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit Meetup</string>
    <string name="action_invite">Invite More People</string>
    <string name="action_invites">New Invites</string>
    <string name="action_lists">Groups</string>
    <string name="action_locate">Locate the Venue</string>
    <string name="action_next">Next</string>
    <string name="action_new_invitation">New Invitation</string>
    <string name="action_plus">New Invitation</string>
    <string name="action_rsvped_events">Plans</string>
    <string name="action_save">Save</string>
    <string name="action_send_invite_to_group">Send Invite to Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Add an Update</string>
    <string name="action_view_invitees">View Invited</string>
    <string name="add">Add</string>
    <string name="add_photo">Add\na\nPhoto</string>
    <string name="add_members_to">Add Members</string>
    <string name="agenda_empty">No plan :C</string>
    <string name="agenda_edit">What\'s the plan?\n\n(e.g. Let\'s go to Shake Shack at 8PM)</string>
    <string name="allowed_to_invite_more">Invitees allowed to invite more:</string>
    <string name="already_have_account">Already have an account? <u>Login</u></string>
    <string name="ask_to_save_group">Save Invitees to a Group?</string>
    <string name="balloon">Balloon</string>
    <string name="cancel">Cancel</string>
    <string name="check_your_plans">Check your plans for\nupcoming events</string>
    <string name="choose_group">Choose a group to set\nsomething up</string>
    <string name="comments_header">COMMENTS</string>
    <string name="comments_numbered_header">COMMENTS (%1$d)</string>
    <string name="comments_hint">Your comment here</string>
    <string name="coming_numbered_header">COMING (%1$d)</string>
    <string name="coming_header">COMING</string>
    <string name="contacts_header">Contacts:</string>
    <string name="create_custom_location">Create Custom Location</string>
    <string name="deadline_passed">Deadline Passed!</string>
    <string name="deadline_time">7:00PM</string>
    <string name="deadline_text">Your invitation wil\nbe visible from\nnow until</string>
    <string name="delete_group_warning">Are you sure you want to delete this group?</string>
    <string name="delete_yourself_warning">Do you really want to remove yourself from this group?</string>
    <string name="done">Done</string>
    <string name="dummy_agenda">Sleepin\' all the way to tomorrow brooooo and I can\'t wait man</string>
    <string name="dummy_location">Kevin\'s house</string>
    <string name="dummy_name">Kevin</string>
    <string name="edit_group">Edit Group:</string>
    <string name="empty"></string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="go_to_plans"><b>Go to Plans</b></string>
    <string name="fa_check"><node>&#xf00c;</node></string>
    <string name="fa_chevron"><node>&#xf054;</node></string>
    <string name="fa_info"><node>&#xf129;</node></string>
    <string name="fa_map_marker"><node>&#xf041;</node></string>
    <string name="fa_quote_left"><node>&#xf10d;</node></string>
    <string name="fa_quote_right"><node>&#xf10e;</node></string>
    <string name="fa_times"><node>&#xf00d;</node></string>
    <string name="fa_user"><node>&#xf007;</node></string>
    <string name="final_edit_agenda">Plan:</string>
    <string name="final_edit_deadline">RSVP deadline:</string>
    <string name="final_edit_location">Location:</string>
    <string name="final_edit_no_photos">No photos yet</string>
    <string name="final_edit_photo">Photos:</string>
    <string name="final_edit_to">To:</string>
    <string name="from">From: </string>
    <string name="group">Group</string>
    <string name="invite">Invite</string>
    <string name="image_content_description">The Image</string>
    <string name="leftToRSVP"> left to RSVP</string>
    <string name="less_than_a_minute">(Less than a minute ago)</string>
    <string name="limit">Limit:</string>
    <string name="limit_question">How many other\npeople can\nattend?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="members_header">Members:</string>
    <string name="mobile_hint">X(XXX)XXX-XXXX</string>
    <string name="more_info">More info</string>
    <string name="new_contact_list">Name The Contact Group</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_internet">Oops! No internet.</string>
    <string name="no_invites"><b>No Invites</b></string>
    <string name="no_limit">No Limit</string>
    <string name="no_locations">No locations found. Please turn on location services.</string>
    <string name="no_new_invites"><b>No New Invites</b></string>
    <string name="no_plans"><b>No Plans</b></string>
    <string name="no_spots_left">No Spots Left</string>
    <string name="no_start_time">No Start Time Set</string>
    <string name="no_thanks"><b>No Thanks</b></string>
    <string name="no_time"></string>
    <string name="not_coming_numbered_header">NOT COMING (%1$d)</string>
    <string name="not_coming_header">NOT COMING</string>
    <string name="optional">Optional:</string>
    <string name="password">Password</string>
    <string name="photo_foursquare">Add Location Photos</string>
    <string name="photo_last">Use Last Photo Taken</string>
    <string name="photo_library">Choose from Library</string>
    <string name="photo_phone">Add Custom Photo</string>
    <string name="photo_remove">Remove Added Photos</string>
    <string name="photo_take">Take Photo</string>
    <string name="preview">Preview</string>
    <string name="response_rate">Response Rate: </string>
    <string name="save">Save</string>
    <string name="save_to_new_group">Save to New Group</string>
    <string name="save_to_existing_group">Save to Existing Group</string>
    <string name="search">Search…</string>
    <string name="send">Send</string>
    <string name="select_all">Select All:</string>
    <string name="select_group"><b>Select a Group</b></string>
    <string name="settings_name_first">First Name</string>
    <string name="settings_name_last">Last Name</string>
    <string name="settings_number">Mobile Number</string>
    <string name="settings_password_set">Set Password</string>
    <string name="settings_password_confirm">Confirm Password</string>
    <string name="settings_photo">Profile Photo</string>
    <string name="share_list">Share Group with Members</string>
    <string name="share_group">Share Group</string>
    <string name="signup">Signup</string>
    <string name="skip">Skip</string>
    <string name="started">Started!</string>
    <string name="starts_in">Starts in %1$01d:%2$02d:%3$02d:%4$02d</string>
    <string name="start_time">Start time: </string>
    <string name="submit">Submit</string>
    <string name="title_activity_contact_lists"></string>
    <string name="title_activity_contact_list_info"></string>
    <string name="title_activity_edit_meetup">Edit Meetup</string>
    <string name="title_activity_more_info"></string>
    <string name="title_activity_new_contact_list">New Contact Group</string>
    <string name="title_activity_new_invitation"></string>
    <string name="title_activity_new_invitation_from_group"></string>
    <string name="title_activity_rsvpevents">Plans</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_add_members">Add Members</string>
    <string name="title_choose_location">Choose Location</string>
    <string name="title_contact_list">Groups</string>
    <string name="title_create_list">Create a Group</string>
    <string name="title_edit_agenda">Write the Plan</string>
    <string name="title_final_edit">Summary</string>
    <string name="title_first_page">Welcome to Balloon!</string>
    <string name="title_preview">Preview</string>
    <string name="title_select_list">Select a Group</string>
    <string name="title_select_members_from_contacts">Select Members</string>
    <string name="title_select_members_from_list">Select Members</string>
    <string name="title_set_deadline">Set the Deadline</string>
    <string name="title_activity_first_page">Welcome to Balloon!</string>
    <string name="title_verification_code">Verification Code</string>
    <string name="to_change_response">to change response</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="updates_header">UPDATES</string>
    <string name="updates_hint">Your important update here</string>
    <string name="verification_code_sent">A verification code has been sent to you via SMS.</string>
    <string name="white_space"></string>
    <string name="yes">Yes</string>

</resources>
