<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item
        android:id="@+id/action_photo_foursquare"
        android:orderInCategory="1"
        android:title="@string/photo_foursquare" />
	
    <item
        android:id="@+id/action_photo_phone"
        android:orderInCategory="2"
        android:title="@string/photo_phone" >
	    
	    <menu>
	    
		    <item
		        android:id="@+id/action_photo_last"
		        android:title="@string/photo_last" />
		    
		    <item
		        android:id="@+id/action_photo_take"
		        android:title="@string/photo_take" />
		    
		    <item
		        android:id="@+id/action_photo_library"
		        android:title="@string/photo_library" />
	
		</menu>
		
	</item>
		
    <item
        android:id="@+id/action_photo_remove"
        android:orderInCategory="3"
        android:title="@string/photo_remove" />

</menu>

