<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.balloon.RSVPEventsActivity" >
    
    <item
        android:id="@+id/action_invites"
        android:orderInCategory="2"
        android:title="@string/action_invites"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_rsvp"
        android:orderInCategory="3"
        android:title="@string/action_rsvped_events"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_create"
        android:orderInCategory="4"
        android:title="@string/action_create"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_lists"
        android:orderInCategory="5"
        android:title="@string/action_lists"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>

</menu>
