<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.balloon.MoreInfoActivity" >
    
	<item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        android:showAsAction="never"
        android:visible="false"/>
	
    <item
        android:id="@+id/action_agenda"
        android:orderInCategory="2"
        android:title="@string/action_agenda"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_update"
        android:orderInCategory="3"
        android:title="@string/action_update"
        android:showAsAction="never"
        android:visible="false" />
        
    <item
        android:id="@+id/action_comment"
        android:orderInCategory="4"
        android:title="@string/action_comment"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_locate"
        android:orderInCategory="5"
        android:title="@string/action_locate"
        android:showAsAction="never"/>

</menu>
