<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.balloon.ContactListInfoActivity" >

    <item
        android:id="@+id/action_add_members"
        android:orderInCategory="0"
        android:title="@string/action_add_members"
        android:visible="false"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_send"
        android:orderInCategory="1"
        android:title="@string/action_send_invite_to_group"
        android:visible="false"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_delete_yourself"
        android:orderInCategory="2"
        android:title="@string/action_delete_yourself"
        android:visible="false"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="3"
        android:title="@string/action_delete_group"
        android:visible="false"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/save"
        android:orderInCategory="4"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always" />

</menu>
