<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finalEditView"
    android:background="@color/lightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:scrollbars="vertical" >
	
	    <LinearLayout
	        android:id="@+id/finalEditTo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="7dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="7dp"
	        android:background="@color/white"
	        android:clickable="true"
	        android:padding="10dp" >
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditToHeader"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/final_edit_to"
                custom:fontName="Roboto-Light.ttf" />
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditToText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ellipsize="end"
	            android:gravity="right"
	            android:lines="1"
	            android:text="@string/dummy_name"
	            android:textColor="@color/blue"
                custom:fontName="Roboto-Light.ttf" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/finalEditAgenda"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="7dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@color/white"
	        android:clickable="true"
	        android:padding="10dp" >
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditAgendaHeader"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/final_edit_agenda"
                custom:fontName="Roboto-Light.ttf" />
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditAgendaText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ellipsize="end"
	            android:gravity="right"
	            android:lines="1"
	            android:text="@string/dummy_agenda"
	            android:textColor="@color/blue"
                custom:fontName="Roboto-Light.ttf" />
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/finalEditLocation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="7dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@color/white"
	        android:clickable="true"
	        android:padding="10dp" >
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditLocationHeader"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/final_edit_location"
                custom:fontName="Roboto-Light.ttf" />
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditLocationText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ellipsize="end"
	            android:gravity="right"
	            android:lines="1"
	            android:text="@string/dummy_location"
	            android:textColor="@color/blue"
                custom:fontName="Roboto-Light.ttf" />

	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/finalEditDeadline"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="7dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@color/white"
	        android:clickable="true"
	        android:padding="10dp" >

	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditDeadlineHeader"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/final_edit_deadline"
                custom:fontName="Roboto-Light.ttf" />
	
	        <com.j32productions.balloon.TextBox
	            android:id="@+id/finalEditDeadlineText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right"
	            android:text="@string/deadline_time"
	            android:textColor="@color/blue"
                custom:fontName="Roboto-Light.ttf" />
	        
	    </LinearLayout>

	   <RelativeLayout
	       android:id="@+id/finalEditInviteMore"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginBottom="7dp"
	       android:layout_marginLeft="10dp"
	       android:layout_marginRight="10dp"
	       android:background="@color/white"
	       android:clickable="true" >

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditInviteMoreHeader"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:text="@string/allowed_to_invite_more"
               custom:fontName="Roboto-Light.ttf" />

	       <CheckBox
	           android:id="@+id/finalEditInviteMoreBox"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_alignParentRight="true"
	           android:layout_centerVertical="true" />

	   </RelativeLayout>
	   
	   <com.j32productions.balloon.TextBox
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginLeft="15dp"
	       android:layout_marginRight="10dp"
	       android:layout_marginTop="10dp"
	       android:text="@string/optional"
           custom:fontName="Roboto-Light.ttf" />

	   <LinearLayout
	       android:id="@+id/finalEditLimit"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginBottom="7dp"
	       android:layout_marginLeft="10dp"
	       android:layout_marginRight="10dp"
	       android:layout_marginTop="7dp"
	       android:background="@color/white"
	       android:clickable="true" >

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditLimitHeader"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:text="@string/limit"
           	   custom:fontName="Roboto-Light.ttf" />

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditLimitText"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:gravity="right"
	           android:textColor="@color/blue"
           	   custom:fontName="Roboto-Light.ttf" />
	       
	   </LinearLayout>
	   
	   <LinearLayout
	       android:id="@+id/finalEditStartTime"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginBottom="7dp"
	       android:layout_marginLeft="10dp"
	       android:layout_marginRight="10dp"
	       android:background="@color/white"
	       android:clickable="true" >

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditStartTimeHeader"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:text="@string/start_time"
           	   custom:fontName="Roboto-Light.ttf" />

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditStartTimeText"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:gravity="right"
	           android:textColor="@color/blue"
           	   custom:fontName="Roboto-Light.ttf" />
	   </LinearLayout>

	   <LinearLayout
	       android:id="@+id/finalEditPhoto"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginBottom="7dp"
	       android:layout_marginLeft="10dp"
	       android:layout_marginRight="10dp"
	       android:background="@color/white"
	       android:clickable="true" >

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditPhotoHeader"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:text="@string/final_edit_photo"
           	   custom:fontName="Roboto-Light.ttf" />

	       <com.j32productions.balloon.TextBox
	           android:id="@+id/finalEditPhotoText"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_margin="10dp"
	           android:gravity="right"
	           android:text="@string/final_edit_no_photos"
	           android:textColor="@color/blue"
           	   custom:fontName="Roboto-Light.ttf" />
	   </LinearLayout>
	
	   <Button
	       android:id="@+id/preview"
	       android:background="@color/gray"
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginLeft="25dp"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="25dp"
	       android:onClick="preview"
	       android:text="@string/preview"
	       android:textColor="@color/white" />
	   
	    <Button
	       android:id="@+id/send"
	       android:background="@color/buttonBlue"
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginLeft="25dp"
	       android:layout_marginTop="10dp"
	       android:layout_marginRight="25dp"
	       android:onClick="makeMeetup"
	       android:text="@string/send"
	       android:textColor="@color/white" />

	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="match_parent"
	        android:layout_height="35dp"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_marginTop="10dp"
	        android:background="@color/red"
	        android:onClick="cancel"
	        android:text="@string/cancel"
	        android:textColor="@color/white" />
	    
	</LinearLayout>
	
</ScrollView>