<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white" >

            <com.j32productions.balloon.TextBox
                android:id="@+id/mobileNumberHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/settings_number"
                custom:fontName="Roboto-Light.ttf" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/mobile_hint"
                android:inputType="phone" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
    		android:background="@color/white" >

            <TextView
                android:id="@+id/firstNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_name_first" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/lastNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_name_last" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:background="@color/white"  >

            <TextView
                android:id="@+id/setPasswordHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_password_set" />

            <EditText
                android:id="@+id/setPassword"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/confirmPasswordHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_password_confirm" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPassword" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/profilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:clickable="true" >

            <TextView
                android:id="@+id/profilePhotoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/settings_photo" />

            <com.parse.ParseImageView
                android:id="@+id/photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_below="@+id/profilePhotoHeader"
                android:layout_centerHorizontal="true"
                android:src="@color/white"
                android:visibility="gone"
                android:visible="false" />

        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/buttonBlue"
            android:onClick="onClick"
            android:text="@string/signup"
            android:textColor="@color/white" />
        
    </LinearLayout>
    

</ScrollView>
